syntax = "proto3";

package register.v1;

import "google/api/annotations.proto";

option go_package = "github.com/ZLSMDB/lsmdb_server/api/register/v1;v1";

// The register service definition.
service Register {
  // Sends a register
  rpc Register (RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      get: "/register"
    };
  }
}

// The request message containing mac addr and ip.
message RegisterRequest {
  string mac = 1;
  string ip = 2;
}

// The response message containing the value about register success or not .
message RegisterReply {
  bool value = 1;
}
