syntax = "proto3";
package kratos.api;

option go_package = "lsmdb/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string addr = 1;
    string password = 2;
    uint32 db = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  message Etcd {
    repeated string cluster_addrs = 1;
    string user_name = 2;
    string password =3;
  }

  message OSS {         // use minio as example
  string endpoint = 1; // s3 addr
  string access_key = 2;
  string secret_key = 3;
  string region = 4;
}

message Leveldb {
  string data_dir = 1; // data dir
  string cache_dir = 2; // cache dir
  uint64 block_size = 3; // size of leveldb block
  uint64 iterator_sampling_rate= 4;
  uint64 write_buffer = 5;
  uint64 compaction_table_tize = 6;
}

  Database database = 1;
  Redis redis = 2;
  Etcd etcd = 3;
  OSS oss = 4;
  Leveldb leveldb = 5;
  string node_name = 6; // 节点号，如node1
}

